--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <section class="form-container">
       <div class="container-fluid">
-        <form class="form-signup">
+        <form name="myForm" class="form-signup">
           <h2 id="form-signup-heading">
             Bicis Locas
           </h2>
@@ -43,7 +43,7 @@
             <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña">
           </div>
           <div class="form-group">
-            <select class="form-control">
+            <select id="bicis" class="form-control">
               <option value="0">Selecciona tu tipo de bici</option>
               <option value="urbana">Urbana</option>
               <option value="treking">Treking</option>
@@ -63,7 +63,7 @@
           </div>
           <button class="btn btn-lg btn-primary btn-block submit-btn" type="submit">Registrar</button>
         </form>
-      </div>  
+      </div>
     </section>
     <!-- /container -->
     <script type='text/javascript' src='js/main.js'></script>
